--- a/AngularMaterial/Views/Home/Index.cshtml
+++ b/AngularMaterial/Views/Home/Index.cshtml
@@ -31,6 +31,7 @@
     <script src="~/scripts/angular-animate/angular-animate.min.js"></script>
     <script src="~/scripts/angular-aria/angular-aria.min.js"></script>
     <script src="~/scripts/angular-material/angular-material.min.js"></script>
+    <script src="~/scripts/appjs/app-factory.js"></script>
     <script src="~/scripts/appjs/index-controller.js"></script>
 </body>
 </html>
