--- a/AngularMaterial/Views/Home/Persona.cshtml
+++ b/AngularMaterial/Views/Home/Persona.cshtml
@@ -23,6 +23,7 @@
     <h1>Bienveniddo</h1>
     <script src="~/scripts/angular/angular.min.js"></script>
     <script src="~/scripts/appjs/persona.js"></script>
+    <script src="~/scripts/appjs/app-factory.js"></script>
 </body>
 </html>
 
